[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Props/fallingPlatforms/fallingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 32 )

[sub_resource type="Animation" id=2]
resource_name = "obj_land"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.52 ),
"transitions": PoolRealArray( 0.15932, 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}

[node name="fallingPlatform" type="Node2D"]
script = ExtResource( 2 )

[node name="body" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="body"]
scale = Vector2( 2, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
shape = SubResource( 1 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/obj_land = SubResource( 2 )

[node name="resetTimer" type="Timer" parent="."]
[connection signal="animation_finished" from="AnimationPlayer" to="body" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="resetTimer" to="body" method="_on_resetTimer_timeout"]
